--- a/index.html
+++ b/index.html
@@ -6,40 +6,41 @@
 -->
 <html>
 	<head>
-		<title>Chris Umbach</title>
+		<title>Nicole Nikas</title>
 		<link rel='shortcut icon' href='/public/favicon.ico' type='image/x-icon'/ >
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body id="top">
 
 		<!-- Header -->
 			<header id="header">
-				<a href="https://github.com/cumbach/" class="image avatar"><img src="images/Umbachphoto.jpg" alt="" /></a>
-				<h1><strong>Christopher Umbach</strong></h1>
-				<h1>Software Engineer and Web Developer<br/>
-				Full-Stack and Front End</h1>
+				<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="Headshot.jpg" alt="" /></a>
+				<h1><strong>Nicole Nikas</strong></h1>
+				<h1>Software Engineerd</h1>
 			</header>
 
 		<!-- Main -->
-			<div id="main">
+			<!--div id="main"-->
 
-				<!-- One -->
-					<section id="one">
+				<!-- First -->
+					<section id="first">
 						<header class="major">
-							<h2>I'm Chris, a software developer based in the Bay Area.<br />
-							I'm passionate about building rich and unique web apps, solving
-							difficult problems, and working with a dynamic team to build awesome products.</h2>
 						</header>
-						<p>My diverse background in both science and business has given me a unique perspective as a software engineer. I am capable of approaching
-						problems from multiple angles, always with an eye on the final product.<br/>
-						I have experience working with Ruby, Rails, React, Angular, Javascript, JQuery, Bootstrap,
-						SQL, CSS, and HTML5 (w/Canvas).</p>
+						<p>Hey, I'm Nicole, I graduated last year with a Bachelor of Science in Engineering Physics, a focus in Electrical Engineering,
+							and a minor in Computer Science. 
+						<br/>
+						<br/>I currently supporting applications at Kaiser Permanente as a Software Engineer for TCS.
+						<br/>
+					        <br/>I am looking for opportunities that will teach me more about the different stages of developing ideas into products. 
+							I want to move out of of supporting, and into the role of developing, while maintaining the same problem solving mindset that 
+							I have in my current role. Ultimately my goal is to grow with a team and contribute to a product I can be proud of..</p>
+						
 						<ul class="actions">
-							<li><a href="ChrisUmbachResume.pdf" class="button">View Resume</a></li>
+							<li><a href="resume.pdf" class="button">View Resume</a></li>
 						</ul>
 					</section>
 
@@ -48,37 +49,9 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) desc">
-								<a href="https://moodly-xyz.herokuapp.com/" class="image fit thumb"><img src="images/Moodly.png" alt="" /></a>
-								<h3>Moodly.xyz - <a href="https://www.youtube.com/watch?v=lQ1fWxBlRsQ" style="color: #49bf9d">Video Demo</a></h3>
-								<p>First-place prize winning app for Microsoft's DevWeek2016 Hackathon Challenge. Moodly is full-stack "emotional wellness"
-									web-app that uses Microsoft's Azure Machine Learning and Project Oxford APIs, as well as Twitter API
-									and Google graphs.</p>
-							</article>
-							<article class="6u$ 12u$(xsmall) desc">
-								<a href="http://www.foodiefridge.space/" class="image fit thumb"><img src="images/foodiefridge.png" alt="" /></a>
-								<h3>FoodieFridge.space</h3>
-								<p>FoodieFridge is a full-stack web-app that uses YummlyAPI to allow users to find and search for recipes based on the
-									ingredients that they have on hand or would like to use for a specific meal.</p>
-							</article>
-							<article class="6u 12u$(xsmall) desc">
-								<a href="http://cumbach.github.io/Bomberman/" class="image fit thumb"><img src="images/Bomberman.png" alt="" /></a>
-								<h3>Bomberman.js</h3>
-								<p>Simple Bomberman game built with HTML5 Canvas and animated with sprites.</p>
-							</article>
-							<article class="6u$ 12u$(xsmall) desc">
-								<a href="https://github.com/cumbach/jQuery-Lite-Snake/blob/master/js/jquery_lite.js" class="image fit thumb"><img src="images/jQueryLite.png" alt="" /></a>
-								<h3>jQueryLite</h3>
-								<p>Lightweight version of jQuery using DOM interface to simplify client-side HTML scripting.</p>
-							</article>
-							<article class="6u 12u$(xsmall) desc">
 								<a href="http://cumbach.github.io/My-Snake-jQuery/" class="image fit thumb"><img src="images/Snake.png" alt="" /></a>
 								<h3>jQueryLite Snake</h3>
 								<p>Simple two-player game of Snake with AI computer opponent built using my own lightweight version of jQuery.</p>
-							</article>
-							<article class="6u$ 12u$(xsmall) desc">
-								<a class="image fit thumb"><img src="images/paradata.png" alt="" /></a>
-								<h3>Company Webpage Design Project</h3>
-								<p>Tied for first place in company webpage design competition for Paradata.</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -111,21 +84,21 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										227 Naples St.<br />
+										477 14th Street<br />
 										San Francisco, CA<br />
 										United States
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										413-387-8891
+										203-548-1164
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mailto:chrisumbach@gmail.com">chrisumbach@gmail.com</a>
+										<a href="mailto:nicolenikas@gmail.com">nicolenikas@gmail.com</a>
 									</li>
 									<li>
 										<h3 class="icon fa-linkedin"><span class="label">Email</span></h3>
-										<a href="https://www.linkedin.com/in/christopher-umbach-50a57a37">www.linkedin.com/in/chrisumbach</a>
+										<a href="https://www.linkedin.com/in/nnikas">www.linkedin.com/in/nnikas</a>
 									</li>
 								</ul>
 							</div>
