--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 			<header id="header">
 				<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="Headshot.jpg" alt="" /></a>
 				<h1><strong>Nicole Nikas</strong></h1>
-				<h1>Software Engineerd</h1>
+				<h1>Software Engineer</h1>
 			</header>
 
 		<!-- Main -->
-			<!--div id="main"-->
+			<div id="main">
 
 				<!-- First -->
-					<section id="first">
+					<section id="one">
 						<header class="major">
 						</header>
 						<p>Hey, I'm Nicole, I graduated last year with a Bachelor of Science in Engineering Physics, a focus in Electrical Engineering,
