--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="P1000267.jpg" height="400" width="400"></a>
+				<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="P1000267.jpg" height="400" width="400"/></a>
 				<h1><strong>Nicole Nikas</strong></h1>
 				<h1>Software Engineer</h1>
 			</header>
