--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Nicole Nikas</title>
-		<link rel='shortcut icon' href='/public/favicon.ico' type='nsquared.png'/ >
+		<link rel='shortcut icon' href='nsquared.png' type='image/x-icon'/ >
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,16 +29,16 @@
 				<!-- First -->
 					<section id="one">
 						<header class="major">
-						</header>
-						<p>Hey, I'm Nicole, I graduated last year with a Bachelor of Science in Engineering Physics, a focus in Electrical Engineering,
+						
+						<h4>Hey, I'm Nicole, I graduated last year with a Bachelor of Science in Engineering Physics, a focus in Electrical Engineering,
 							and a minor in Computer Science. 
 						<br/>
 						<br/>I currently supporting applications at Kaiser Permanente as a Software Engineer for TCS.
 						<br/>
 					        <br/>I am looking for opportunities that will teach me more about the different stages of developing ideas into products. 
 							I want to move out of of supporting, and into the role of developing, while maintaining the same problem solving mindset that 
-							I have in my current role. Ultimately my goal is to grow with a team and contribute to a product I can be proud of..</p>
-						
+							I have in my current role. Ultimately my goal is to grow with a team and contribute to a product I can be proud of..</h4>
+						</header>
 						<ul class="actions">
 							<li><a href="resume.pdf" class="button">View Resume</a></li>
 						</ul>
