--- a/index.html
+++ b/index.html
@@ -29,18 +29,16 @@
 				<!-- First -->
 					<section id="one">
 						<header class="major">
-						
-						<h4>Hey, I'm Nicole, I graduated last year with a Bachelor of Science in Engineering Physics, a focus in Electrical Engineering,
-							and a minor in Computer Science. 
+						<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="headerphoto.jpg"/></a>
+						<h4>
 						<br/>
-						<br/>I currently supporting applications at Kaiser Permanente as a Software Engineer for TCS.
 						<br/>
-					        <br/>I am looking for opportunities that will teach me more about the different stages of developing ideas into products. 
-							I want to move out of of supporting, and into the role of developing, while maintaining the same problem solving mindset that 
-							I have in my current role. Ultimately my goal is to grow with a team and contribute to a product I can be proud of..</h4>
+					        <br/>I’m Nicole Nikas, a Software Engineer who moved to San Francisco in October to support medical applications
+							for Kaiser Permanente. I’m moving out of supporting, and into developing, while maintaining my problem-solving foundation.  
+							My goal is to grow with a team and contribute to a product I can be proud of.</h4>
 						</header>
 						<ul class="actions">
-							<li><a href="resume.pdf" class="button">View Resume</a></li>
+							<li><a href="NicoleResumeMay2.pdf" class="button">View Resume</a></li>
 						</ul>
 					</section>
 
@@ -49,13 +47,20 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) desc">
-								<a href="http://cumbach.github.io/My-Snake-jQuery/" class="image fit thumb"><img src="images/Snake.png" alt="" /></a>
-								<h3>jQueryLite Snake</h3>
-								<p>Simple two-player game of Snake with AI computer opponent built using my own lightweight version of jQuery.</p>
+								<a href="http://nnikas.github.io/TipStop/" class="image fit thumb"><img src="images/Snake.png" alt="" /></a>
+								<h3>TipStop</h3>
+								<p>This is an iOS app that calculates a tip for you and your friends</p>
+							</article>
+						</div>
+						<div class="row">
+							<article class="6u 12u$(xsmall) desc">
+								<a href="http://nnikas.github.io/AudioVisualization/" class="image fit thumb"><img src="images/Snake.png" alt="" /></a>
+								<h3>Visualizer</h3>
+								<p>Demonstrate 3 visual representations of music </p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="https://github.com/cumbach" class="button">Github</a></li>
+							<li><a href="https://github.com/nnikas" class="button">Github</a></li>
 						</ul>
 					</section>
 
