--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- First -->
 					<section id="one">
 						<header class="major">
-						<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="headerphoto.jpg"/></a>
+						<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="headerphoto.JPG"/></a>
 						<h4>
 						<br/>
 						<br/>
