--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 				<!-- First -->
 					<section id="one">
 						<header class="major">
-						<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="headerphoto.JPG"/></a>
+							<h2> "The energy of the mind is the essence of the soul."</h2>
+						<a href="https://github.com/NicoleNikas/" class="image"><img src="headerphoto.JPG"/></a>
 						<h4>
 						<br/>
 						<br/>
