--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 				<!-- First -->
 					<section id="one">
 						<header class="major">
-							<h2> "The energy of the mind is the essence of the soul."</h2>
-						<a href="https://github.com/NicoleNikas/" class="image"><img src="headerphoto.JPG"/></a>
+							<h2> "The energy of the mind is the essence of the soul." - Aristotle</h2>
+						<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="headerphoto.JPG"/></a>
+							<h3>Hey there! Thanks for checking out my site, I appreciate your interest. Here is myself summed up in three sentences:</h3>
 						<h4>
 						<br/>
 						<br/>
@@ -57,7 +58,7 @@
 							<article class="6u 12u$(xsmall) desc">
 								<a href="http://nnikas.github.io/AudioVisualization/" class="image fit thumb"><img src="images/Snake.png" alt="" /></a>
 								<h3>Visualizer</h3>
-								<p>Demonstrate 3 visual representations of music </p>
+								<p>Demonstrates 3 visual representations of music </p>
 							</article>
 						</div>
 						<ul class="actions">
