--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
 				<!-- First -->
 					<section id="one">
 						<header class="major">
-							<h2> "The energy of the mind is the essence of the soul." - Aristotle</h2>
+						
 						<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="headerphoto.JPG"/></a>
-							<h3>Hey there! Thanks for checking out my site, I appreciate your interest. Here is myself summed up in three sentences:</h3>
-						<h4>
+						<h4> 
+							"There is nothing mpossible to him who will try." - Alexander the Great
+						</h4>
+						<h3>
 						<br/>
 						<br/>
-					        <br/>I’m Nicole Nikas, a Software Engineer who moved to San Francisco in October to support medical applications
+					        <br/>
+							I’m Nicole Nikas, a Software Engineer who moved to San Francisco in October to support medical applications
 							for Kaiser Permanente. I’m moving out of supporting, and into developing, while maintaining my problem-solving foundation.  
-							My goal is to grow with a team and contribute to a product I can be proud of.</h4>
+							My goal is to grow with a team and contribute to a product I can be proud of.
+						</h3>
 						</header>
 						<ul class="actions">
 							<li><a href="NicoleResumeMay2.pdf" class="button">View Resume</a></li>
