--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
 							"There is nothing mpossible to him who will try." - Alexander the Great
 						</h4>
 						<h3>
-						<br/>
-						<br/>
 					        <br/>
 							I’m Nicole Nikas, a Software Engineer who moved to San Francisco in October to support medical applications
 							for Kaiser Permanente. I’m moving out of supporting, and into developing, while maintaining my problem-solving foundation.  
@@ -53,14 +51,18 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) desc">
-								<a href="http://nnikas.github.io/TipStop/" class="image fit thumb"><img src="images/Snake.png" alt="" /></a>
+								<a href="http://nnikas.github.io/TipStop/" class="image fit thumb"><img src="Tipstop1.png" alt="" /></a>
+								<a href="http://nnikas.github.io/TipStop/" class="image fit thumb"><img src="Tipstop2.png" alt="" /></a>
+								<a href="http://nnikas.github.io/TipStop/" class="image fit thumb"><img src="Tipstop3.png" alt="" /></a>
 								<h3>TipStop</h3>
 								<p>This is an iOS app that calculates a tip for you and your friends</p>
 							</article>
 						</div>
 						<div class="row">
 							<article class="6u 12u$(xsmall) desc">
-								<a href="http://nnikas.github.io/AudioVisualization/" class="image fit thumb"><img src="images/Snake.png" alt="" /></a>
+								<a href="http://nnikas.github.io/AudioVisualization/#waveform" class="image fit thumb"><img src="waveform_screenshot.png" alt="" /></a>
+								<a href="http://nnikas.github.io/AudioVisualization/#spectrum" class="image fit thumb"><img src="spectrum_screenshot.png" alt="" /></a>
+								
 								<h3>Visualizer</h3>
 								<p>Demonstrates 3 visual representations of music </p>
 							</article>
@@ -95,7 +97,6 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										477 14th Street<br />
 										San Francisco, CA<br />
 										United States
 									</li>
