--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="headerphoto.JPG"/></a>
 	</head>
 	<body id="top">
-	<a href="https://github.com/NicoleNikas/" class="image avatar"><img src="headerphoto.JPG"/></a>
+	
 		<!-- Header -->
 			<header id="header">
 				<a href="https://github.com/nnikas/NicoleNikas/" class="image avatar"><img src="P1000267.jpg"/></a>
@@ -48,8 +49,8 @@
 							<article class="6u 12u$(xsmall) desc">
 								<h3>TipStop</h3>
 								<p>This is an iOS app that calculates a tip for you and your friends</p>
-								<a href="http://nnikas.github.io/TipStop/" class="image fit thumb"><img src="TipStop1.png" alt="" /></a>
-								<a href="http://nnikas.github.io/TipStop/" class="image fit thumb"><img src="TipStop2.png" alt="" /></a>
+								<a href="http://nnikas.github.io/nnikas/TipStop/" class="image"><img src="TipStop1.png" alt="" /></a>
+								<a href="http://nnikas.github.io/nnikas/TipStop/" class="image fit thumb"><img src="TipStop2.png" alt="" /></a>
 								
 							</article>
 						</div>
