--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 					<section id="one">
 						<header class="major">
 
-							<h3>I’m Nicole Nikas, a Software Engineer who moved to San Francisco in October to support medical applications
-							for Kaiser Permanente. I’m moving out of supporting, and into developing, while maintaining my problem-solving foundation.  
-							My goal is to grow with a team and contribute to a product I can be proud of.
+							<h3>I’m Nicole Nikas, a Software Engineer with 2+ years’ experience designing solutions for the healthcare industry. I’ve started my career with a strong foundation, learning good practices and habits. I stay adaptable and curious when I’m problem solving. I’m not afraid to ask difficult questions and provide ideas.  I’m efficient because I’m organized and clear when I communicate. I manage to stay on task while still creating a collaborative atmosphere with teammates. Plus, I’m fun to be around. 
 							</h3>
 							
 						</header>
@@ -83,6 +81,7 @@
 
 
 						<div class="row">
+							<!--
 							<div class="8u 12u$(small)">
 								<form method="post" action="http://formspree.io/nicolenikas@gmail.com">
 									<div class="row uniform 50%">
@@ -95,7 +94,7 @@
 									</ul>
 								</form>
 							</div>
-
+							-->
 
 							<div class="4u$ 12u$(small)">
 								<ul class="labeled-icons">
